Modify all html file to php file

--- a/admin/documentation.html
+++ b/admin/documentation.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE .php>
+<.php>
 
 <head>
-  <title> Sneat - Free Bootstrap 5 HTML Admin Template </title>
-  <meta http-equiv="refresh" content="0; URL='https://themeselection.com/demo/sneat-bootstrap-html-admin-template/documentation/'" />
+  <title> Sneat - Free Bootstrap 5 .php Admin Template </title>
+  <meta http-equiv="refresh" content="0; URL='https://themeselection.com/demo/sneat-bootstrap-.php-admin-template/documentation/'" />
 </head>
 
 <body>
   <p>If you do not redirect please visit :
-    https://themeselection.com/demo/sneat-bootstrap-html-admin-template/documentation/</p>
+    https://themeselection.com/demo/sneat-bootstrap-.php-admin-template/documentation/</p>
 </body>
 
-</html>
+</.php>
