--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
 <!-- Login Modal -->
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE .php>
+<.php lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -39,4 +39,4 @@
     </div>
 </body>
 
-</html>
+</.php>
