--- a/register.html
+++ b/register.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    
-  </head>
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
+ </head>
  <body>
     
      <div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="registerModalLabel" aria-hidden="true">
-         <div class="modal-dialog">
+         <div class="modal-dialog modal-dialog-scrollable">
              <div class="modal-content">
                  <div class="modal-header">
                      <h5 class="modal-title" id="registerModalLabel">Register</h5>
@@ -19,6 +19,7 @@
             <div class="modal-body">
                 <form id="registerForm">
                     <div class="mb-3">
+
                         <label for="registerName" class="form-label">Name</label>
                     <input type="name" class="form-control" id="registerName" required>
                 </div>
